<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="25dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="25dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mooooood.hellogoodbye.MainActivity"
    android:background="@drawable/littleboygirlframe"
    android:clickable="false">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello"
        android:id="@+id/textView"
        android:textColor="@color/darkorange"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/creepdoll"
        android:contentDescription="@string/exclaim_img"
        android:layout_centerInParent="true" />


    <Button
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:text="@string/exclaim_btn"
        android:id="@+id/button"
        android:background="@drawable/creepyframe"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        android:allowUndo="false"
        tools:ignore="PrivateResource"
        tools:targetApi="m"
        android:layout_marginBottom="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button

        android:layout_width="200dip"
        android:layout_height="50dip"
        android:text="@string/top_btn"
        android:id="@+id/button2"
        android:background="@drawable/creepyframe"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="50dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clearText"
        android:id="@+id/textView2"
        android:textColor="@color/drkgreen"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/will"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView4"
        android:text="@string/jot" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView5"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/dre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:text="@string/gerry" />

</RelativeLayout>
